adding the navigations to help the iuser and add the rating functionality

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SECRET_KEY='h!r56@ggr)!))#se)@&v_gw2&lnjk)k8*ahyebqdqd@wc4xw_x'
 DEBUG='True' 
-DB_NAME='award'
+DB_NAME='rate'
 DB_USER='florence' 
 DB_PASSWORD='kambo' 
 DB_HOST='127.0.0.1'
